# TranscodingServer

./: CMakeLists.txt  CustomLogger.cpp  Readme.md  TranscodingService.cpp  UriParts.cpp  datetime.cpp  main.cpp
headers/: CustomLogger.h  TranscodingService.h  UriParts.h  datetime.h
